# ===========================================================================
# NetEvo Foundation Library
# Copyright (C) 2011 Thomas E. Gorochowski <tgorochowski@me.com>
# Bristol Centre for Complexity Sciences, University of Bristol, Bristol, UK
# ===========================================================================

## Top directory

#Build in these directories:
SUBDIRS= $(GENERIC_LIBRARY_NAME)

#Distribute these directories:
DIST_SUBDIRS = $(GENERIC_LIBRARY_NAME)

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = netevo.pc

EXTRA_DIST=autogen.sh
